--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -55,6 +55,7 @@ body {
     width: 100%;
     height: 100vh;
     position: static;
+    overflow-x: hidden;
   }
 }
 
